<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.viewcustomer.ViewCustomerActivity"
    tools:showIn="@layout/activity_view_customer">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/keyline_medium"
        android:stretchColumns="1">

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_person_type"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_customer_person_type"
                    android:hint="@string/add_customer_select_type_of_person_hint"
                    android:inputType="text|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow android:id="@+id/document">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_document"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_document"
                    android:hint="@string/add_customer_cpf_or_cnpj_hint"
                    android:inputType="text|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow android:id="@+id/ie">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_ie"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_ie"
                    android:hint="@string/add_customer_ie_hint"
                    android:inputType="text|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@id/input_layout_customer_name"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_customer_name"
                    android:hint="@string/add_customer_customer_name_hint"
                    android:inputType="text|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_fantasy_name"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_fantasy_name"
                    android:hint="@string/add_customer_fantasy_name_hint"
                    android:inputType="text|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow android:id="@+id/buyer">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_buyer"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_buyer"
                    android:hint="@string/add_customer_buyer_hint"
                    android:inputType="text|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="@dimen/size_all_left_icon_size"
                android:layout_height="@dimen/size_all_left_icon_size"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/all_email_grey_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_email"
                    android:hint="@string/add_customer_email_hint"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="@dimen/size_all_left_icon_size"
                android:layout_height="@dimen/size_all_left_icon_size"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/add_customer_place_grey_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_postal_code"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_postal_code"
                    android:hint="@string/add_customer_postal_code_hint"
                    android:inputType="text|textCapWords"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_address"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_address"
                    android:hint="@string/add_customer_address_hint"
                    android:inputType="text|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_address_number"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_address_number"
                    android:hint="@string/add_customer_address_number_hint"
                    android:inputType="text|textCapWords"
                    android:maxLength="6" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_district"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_district"
                    android:hint="@string/add_customer_district_hint"
                    android:inputType="text|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_state"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_state"
                    android:hint="@string/add_customer_select_state_hint" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>


        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_city"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_city"
                    android:hint="@string/add_customer_select_city_hint" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_address_complement"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_address_complement"
                    android:hint="@string/add_customer_address_complement_hint"
                    android:inputType="text|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="@dimen/size_all_left_icon_size"
                android:layout_height="@dimen/size_all_left_icon_size"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/all_phone_grey_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_main_phone"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_main_phone"
                    android:hint="@string/add_customer_main_phone_hint"
                    android:inputType="phone"
                    android:maxLength="15" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="@dimen/size_all_left_icon_size"
                android:layout_height="@dimen/size_all_left_icon_size"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/all_phone_grey_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.ForzaApp.FormInputLayout"
                android:id="@+id/input_layout_other_phone"
                android:layout_column="1">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.ForzaApp.NonEditableField"
                    android:id="@+id/edit_text_other_phone"
                    android:hint="@string/add_customer_another_phone_hint"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:maxLength="15" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

    </TableLayout>
</androidx.core.widget.NestedScrollView>
